--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="#F7F7F7"
+                android:background="#FFEAEA"
                 android:gravity="center_horizontal"
                 android:textColor="#504E4E"
                 android:textSize="24dp"
@@ -92,10 +92,11 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="0dp"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="12dp"
                 android:text="안녕하세요:)"
-                android:textSize="18dp"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.442"
@@ -105,9 +106,10 @@
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="0dp"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:text="매장에서 드시나요? 아니면 포장해드릴까요?"
-                android:textSize="18dp"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,9 +118,9 @@
 
             <ImageButton
                 android:id="@+id/btn_Eat_main_menu_page"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:layout_marginStart="300dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="100dp"
                 android:backgroundTint="#FF5555"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -128,9 +130,9 @@
 
             <ImageButton
                 android:id="@+id/btn_TakeOut_main_menu_page"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:layout_marginEnd="300dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginEnd="100dp"
                 android:backgroundTint="#FF5555"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
