--- a/app/src/main/res/layout-land/activity_login_page.xml
+++ b/app/src/main/res/layout-land/activity_login_page.xml
@@ -64,7 +64,7 @@
                 android:layout_marginBottom="120dp"
                 android:backgroundTint="#F6ABAB"
                 android:text="회원가입"
-                android:textColor="#FFFFFF"
+                android:textColor="#504E4E"
                 android:textSize="30dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
