--- a/app/src/main/res/layout-land/activity_main_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_main_menu_page.xml
@@ -85,21 +85,24 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:text="어떤 메뉴를 주문할까요?"
+                android:textColor="#504E4E"
                 android:textSize="25dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView6"
+                app:layout_constraintStart_toStartOf="@+id/imageButton3"
                 app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
             <Button
                 android:id="@+id/button5"
                 android:layout_width="300dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="12dp"
+                android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="커피"
+                android:textColor="#F7F7F7"
                 android:textSize="30dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView6" />
@@ -107,9 +110,12 @@
             <Button
                 android:id="@+id/button6"
                 android:layout_width="300dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="라떼"
+                android:textColor="#F7F7F7"
                 android:textSize="30dp"
                 app:layout_constraintEnd_toEndOf="@+id/button5"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -119,9 +125,12 @@
             <Button
                 android:id="@+id/button7"
                 android:layout_width="300dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="차"
+                android:textColor="#F7F7F7"
                 android:textSize="30dp"
                 app:layout_constraintEnd_toEndOf="@+id/button6"
                 app:layout_constraintStart_toStartOf="@+id/button6"
@@ -130,9 +139,12 @@
             <Button
                 android:id="@+id/button8"
                 android:layout_width="300dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="요거트"
+                android:textColor="#F7F7F7"
                 android:textSize="30dp"
                 app:layout_constraintEnd_toEndOf="@+id/button9"
                 app:layout_constraintStart_toStartOf="@+id/button9"
@@ -141,11 +153,13 @@
             <Button
                 android:id="@+id/button9"
                 android:layout_width="300dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="30dp"
+                android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="에이드"
+                android:textColor="#F7F7F7"
                 android:textSize="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -153,9 +167,12 @@
             <Button
                 android:id="@+id/button10"
                 android:layout_width="300dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="디저트"
+                android:textColor="#F7F7F7"
                 android:textSize="30dp"
                 app:layout_constraintEnd_toEndOf="@+id/button8"
                 app:layout_constraintStart_toStartOf="@+id/button8"
