--- a/app/src/main/res/layout/activity_mode_change_page.xml
+++ b/app/src/main/res/layout/activity_mode_change_page.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Mode_change_page"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Mode_change_page">
-
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="0dp"
@@ -30,13 +29,13 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="110dp"
+                android:layout_width="220dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/kobb" />
+                app:srcCompat="@drawable/kobbicon" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
@@ -101,7 +100,7 @@
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="120dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +113,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="현재 접속된 모드는 고객모드입니다."
-                android:textSize="34dp"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
@@ -125,7 +125,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="관리자 모드로 전환을 원하시면"
-                android:textSize="34dp"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView11"
                 app:layout_constraintStart_toStartOf="@+id/textView11"
@@ -137,7 +138,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:text="아래에 비밀번호를 입력해주세요."
-                android:textSize="34dp"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView13"
                 app:layout_constraintStart_toStartOf="@+id/textView13"
@@ -149,6 +151,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:text="관리자 비밀번호를 입력해주세요"
+                android:textColor="#504E4E"
                 android:textSize="40dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -158,8 +161,9 @@
             <EditText
                 android:id="@+id/editTextTextPassword"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginTop="48dp"
+                android:background="#F8F0F0"
                 android:backgroundTint="#F8F0F0"
                 android:ems="10"
                 android:inputType="textPassword"
@@ -175,10 +179,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="100dp"
+                android:layout_marginBottom="30dp"
                 android:backgroundTint="#FF5555"
                 android:text="뒤로 가기"
                 android:textColor="#FFFFFF"
                 android:textSize="32dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
@@ -188,10 +194,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="100dp"
+                android:layout_marginBottom="30dp"
                 android:backgroundTint="#ff5555"
                 android:text="전환 하기"
                 android:textColor="#FFFFFF"
                 android:textSize="32dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                 app:layout_constraintEnd_toEndOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
@@ -201,14 +209,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="textPersonName"
                 android:text="(상호명)"
-                android:textSize="32dp"
+                android:textColor="#FF5555"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/btn_Choice_mode_page"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
+                app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
+                app:srcCompat="@drawable/passwordkey2" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
